# TheForceEngine

./: .gitignore  CMakeLists.txt  CreateGitVersionH.cmake  DarkXL2.sln  Makefile  ProjectStructure.md  README.md  Roadmap.md  TheForceEngine.sln  vcpkg.json
TheForceEngine/: CMakeLists.txt  Resource.h  TheForceEngine.appdata.xml  TheForceEngine.desktop  TheForceEngine.desktop.in  TheForceEngine.metainfo.xml  TheForceEngine.rc  TheForceEngine.vcxproj  TheForceEngine.vcxproj.filters  accessibility.cpp  accessibility.h  crashdump.dmp  gitVersion.h  io.github.theforceengine.tfe.Mod.AdjustableHud.metainfo.xml  io.github.theforceengine.tfe.desktop  io.github.theforceengine.tfe.metainfo.xml  logics.h  main.cpp  version.h
TheForceEngine/Captions/: README.txt  subtitles-de.txt  subtitles-en.txt  subtitles.txt
TheForceEngine/DXL2_Archive/: archive.h  labArchive.cpp  lfdArchive.h
TheForceEngine/DXL2_Asset/: assetSystem.cpp  assetSystem.h  colormapAsset.h  fontAsset.cpp  fontAsset.h  gameMessages.cpp  gameMessages.h  gmidAsset.h  imageAsset.cpp  imageAsset.h  infAsset.h  levelAsset.cpp  levelAsset.h  levelList.cpp  levelList.h  levelObjectsAsset.cpp  levelObjectsAsset.h  logicTypes.h  modelAsset.cpp  modelAsset.h  paletteAsset.cpp  paletteAsset.h  spriteAsset.h  textureAsset.cpp  textureAsset.h  vocAsset.h  vueAsset.h
TheForceEngine/DXL2_Audio/: audioDevice.cpp  audioSystem.cpp  midiDevice.cpp  midiPlayer.h
TheForceEngine/DXL2_Editor/: editor.cpp  editor.h  levelEditor.cpp  levelEditor.h  levelEditorData.cpp  levelEditorData.h
TheForceEngine/DXL2_FileSystem/: filestream.h  fileutil.cpp  paths.h  stream.h
TheForceEngine/DXL2_FrontEndUI/: frontEndUi.cpp  frontEndUi.h
TheForceEngine/DXL2_Game/: gameConstants.h  gameHud.cpp  gameHud.h  gameLoop.h  gameMain.cpp  gameMain.h  gameObject.cpp  gameObject.h  gameState.h  geometry.h  level.cpp  level.h  modelRendering.cpp  modelRendering.h  physics.cpp  physics.h  player.h  renderCommon.h  view.h
TheForceEngine/DXL2_InfSystem/: infSystem.cpp  infSystem.h
TheForceEngine/DXL2_Input/: input.cpp  input.h  inputEnum.h
TheForceEngine/DXL2_LogicSystem/: logicSystem.cpp  logicSystem.h
TheForceEngine/DXL2_RenderBackend/: indexBuffer.h  renderBackend.h  renderState.h  textureGpu.h  vertexBuffer.h
TheForceEngine/DXL2_Renderer/: renderer.cpp  renderer.h
TheForceEngine/DXL2_ScriptSystem/: scriptSystem.cpp  scriptSystem.h
TheForceEngine/DXL2_Settings/: settings.h
TheForceEngine/DXL2_System/: math.cpp  math.h  memoryPool.h  parser.h  system.h
TheForceEngine/DXL2_Ui/: markdown.cpp  markdown.h  ui.h
TheForceEngine/DXL2_WeaponSystem/: weaponSystem.h  weapons.h
TheForceEngine/Definitions/: lights.txt
TheForceEngine/EditorDef/: EntityDef.ini  LogicDef.ini  VarDef.ini
TheForceEngine/ExternalData/: effects.json  projectiles.json
TheForceEngine/Mods - Copy/: MOD_CONF.TXT
TheForceEngine/ScriptTests/: Readme.txt  Test_VectorMath.fs  Test_float2.fs  Test_float2x2.fs  Test_float3.fs  Test_float4.fs
TheForceEngine/Shaders/: blit.frag  blit.vert  bloom.vert  bloomDownsample.frag  bloomDownsample1.frag  bloomMerge.frag  bloomThreshold.frag  blur7x7.frag  config.h  curve.h  filter.h  gpu_render_modelHologram.frag  gpu_render_modelHologram.vert  gpu_render_modelSolid.frag  gpu_render_modelSolid.vert  gpu_render_quad.frag  gpu_render_quad.vert  gpu_render_sprite.frag  gpu_render_sprite.vert  gpu_render_wall.frag  gpu_render_wall.vert  grid.h  grid2d.frag  grid2d.vert  grid3d.frag  grid3d.vert  lighting.h  line2d.frag  line2d.vert  line3d.frag  line3d.vert  line3d_debug.frag  line3d_debug.vert  mdl3d.frag  mdl3d.vert  overlay.frag  overlay.vert  quad2d.frag  quad2d.vert  textureSampleFunc.h  (+12 more)
TheForceEngine/SoundFonts/: AWE64.sf2  Florestan GM.sf2  SYNTHGM.SBK  SYNTHGM.sf2  soundFonts.txt
TheForceEngine/TFE_A11y/: CMakeLists.txt  accessibility.cpp  accessibility.h  filePathList.cpp  filePathList.h
TheForceEngine/TFE_Archive/: CMakeLists.txt  archive.cpp  archive.h  gobArchive.cpp  gobArchive.h  gobMemoryArchive.cpp  gobMemoryArchive.h  labArchive.cpp  labArchive.h  lfdArchive.cpp  lfdArchive.h  zipArchive.cpp  zipArchive.h  zstdCompression.cpp  zstdCompression.h
TheForceEngine/TFE_Asset/: CMakeLists.txt  assetSystem.cpp  assetSystem.h  colormapAsset.cpp  colormapAsset.h  dfKeywords.cpp  dfKeywords.h  fontAsset.cpp  fontAsset.h  gameMessages.cpp  gameMessages.h  gifWriter.cpp  gifWriter.h  gmidAsset.cpp  gmidAsset.h  imageAsset.cpp  imageAsset.h  infAsset.cpp  infAsset.h  levelAsset.cpp  levelAsset.h  levelList.cpp  levelList.h  levelObjectsAsset.cpp  levelObjectsAsset.h  logicTypes.h  modelAsset.cpp  modelAsset.h  modelAsset_jedi.cpp  modelAsset_jedi.h  paletteAsset.cpp  paletteAsset.h  spriteAsset.cpp  spriteAsset.h  spriteAsset_Jedi.cpp  spriteAsset_Jedi.h  textureAsset.cpp  textureAsset.h  vocAsset.cpp  vocAsset.h  (+4 more)
TheForceEngine/TFE_Audio/: CMakeLists.txt  RtAudio.cpp  audioDevice.cpp  audioDevice.h  audioFilters.cpp  audioFilters.h  audioOutput.h  audioSystem.cpp  audioSystem.h  iMuseEvent.h  midi.h  midiDevice.cpp  midiDevice.h  midiDeviceState.cpp  midiDeviceState.h  midiPlayer.cpp  midiPlayer.h  systemMidiDevice.cpp  systemMidiDevice.h
TheForceEngine/TFE_Collision/: collision.cpp  collision.h
TheForceEngine/TFE_DarkForces/: CMakeLists.txt  actor.cpp  actor.h  agent.cpp  agent.h  animLogic.cpp  animLogic.h  automap.cpp  automap.h  briefingList.cpp  briefingList.h  cheats.cpp  cheats.h  config.cpp  config.h  cutscene.cpp  cutscene.h  cutsceneList.cpp  cutsceneList.h  cutscene_film.cpp  cutscene_player.cpp  cutscene_player.h  darkForcesMain.cpp  darkForcesMain.h  gameList.cpp  gameList.h  gameMessage.cpp  gameMessage.h  gameMusic.cpp  gameMusic.h  generator.cpp  generator.h  hitEffect.cpp  hitEffect.h  hud.cpp  hud.h  item.cpp  item.h  itemId.h  logic.cpp  (+28 more)
TheForceEngine/TFE_Editor/: CMakeLists.txt  archiveViewer.cpp  archiveViewer.h  assetBrowser.cpp  assetBrowser.h  editor.cpp  editor.h  editorAsset.cpp  editorAsset.h  editorColormap.cpp  editorComboBox.cpp  editorComboBox.h  editorConfig.cpp  editorConfig.h  editorFrame.cpp  (+31 more)
(+1397 files in other folders)
